Adding tests for kafka