@@ -6,18 +6,19 @@ import lombok.SneakyThrows;
 import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
-import org.checkerframework.checker.units.qual.C;
 
 import java.time.Duration;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 public class ConsensusBroker {
     private final ArrayList<String> ipAddresses;
     private final KafkaSmith kafkaManufactureSmith;
-    private final Map<TopicType, TreeMap<Integer, String>> sequencedMap;
+    private final ConcurrentHashMap<TopicType, TreeMap<Integer, Map<Integer, String>>> sequencedMap;
     private String leader_host;
     private int partition;
 
@@ -27,10 +28,10 @@ public class ConsensusBroker {
         this.leader_host = leader_host;
         this.partition = partition;
         this.kafkaManufactureSmith = new KafkaManufactureSmith(ipAddresses);
-        this.sequencedMap = new HashMap<>();
+        this.sequencedMap = new ConcurrentHashMap<TopicType, TreeMap<Integer, Map<Integer, String>>>();
         this.sequencedMap.put(TopicType.ANNOUNCE_PHASE, new TreeMap<>(Collections.reverseOrder()));
         this.sequencedMap.put(TopicType.PREPARE_PHASE, new TreeMap<>(Collections.reverseOrder()));
-        this.sequencedMap.put(TopicType.COMMITTEE_PHASE,new TreeMap<>(Collections.reverseOrder()));
+        this.sequencedMap.put(TopicType.COMMITTEE_PHASE, new TreeMap<>(Collections.reverseOrder()));
         this.sequencedMap.put(TopicType.DISPERSE_PHASE1, new TreeMap<>(Collections.reverseOrder()));
         this.sequencedMap.put(TopicType.DISPERSE_PHASE2, new TreeMap<>(Collections.reverseOrder()));
     }
@@ -49,31 +50,34 @@ public class ConsensusBroker {
         this.kafkaManufactureSmith.updateLeaderHost(KafkaKingdomType.CONSUMER_SAME, this.ipAddresses, leader_host, partition, true);
     }
 
-    public void produceMessage(String topic, String key, String value) {
+    public void produceMessage(TopicType topic, String key, String value) {
         KafkaProducer producer = this.kafkaManufactureSmith.getKafkaComponent(KafkaKingdomType.PRODUCER);
-        producer.produceMessage(topic, key, value);
+        producer.produceMessage(topic.name(), key, value);
 
     }
 
-    public void produceMessage(String topic, int partition, String key, String value) {
+    public void produceMessage(TopicType topic, int partition, String key, String value) {
         KafkaProducer producer = this.kafkaManufactureSmith.getKafkaComponent(KafkaKingdomType.PRODUCER);
-        producer.produceMessage(topic, partition, key, value);
+        producer.produceMessage(topic.name(), partition, key, value);
 
     }
 
     @SneakyThrows
-    public String receiveMessageFromValidators(String topic, String key) {
+    public List<String> receiveMessageFromValidators(TopicType topic, String key) {
         KafkaConsumerPrivateGroup leaderConsumeData = this.kafkaManufactureSmith.getKafkaComponent(KafkaKingdomType.CONSUMER_PRIVATE);
-        ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors()*2);
+        ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 2);
         List<Consumer<String, String>> consumers = leaderConsumeData.receiveAllBrokerConsumersExceptLeader();
-        for(int i=0;i<consumers.size();i++) {
+        for (int i = 0; i < consumers.size(); i++) {
             int finalI = i;
             Runnable task = () -> {
                 while (true) {
                     Consumer<String, String> consumer = consumers.get(finalI);
                     ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(KafkaConfiguration.RECEIVE_TIMEOUT));
                     for (ConsumerRecord<String, String> record : records) {
-                        this.sequencedMap.get(topic).put(Integer.parseInt(record.key()), record.value());
+                        if (!this.sequencedMap.get(topic).containsKey(Integer.parseInt(record.key()))) {
+                            this.sequencedMap.get(topic).put(Integer.parseInt(record.key()), new HashMap<>());
+                        }
+                        this.sequencedMap.get(topic).get(Integer.parseInt(record.key())).put(finalI, record.value());
                         if (record.key().equals(key)) {
                             break;
                         }
@@ -86,18 +90,22 @@ public class ConsensusBroker {
         executorService.awaitTermination(KafkaConfiguration.EXECUTOR_TIMEOUT, TimeUnit.MILLISECONDS);
         executorService.shutdownNow();
         executorService.close();
-        return this.sequencedMap.get(topic).firstEntry().getValue();
+        return this.sequencedMap.get(topic).firstEntry().getValue().values().stream().collect(Collectors.toList());
     }
+
     @SneakyThrows
-    public String receiveMessageFromLeader(String topic, String key, String leader_host) {
+    public Optional<String> receiveMessageFromLeader(TopicType topic, String key, String leader_host) {
         KafkaConsumerPrivateGroup leaderConsumeData = this.kafkaManufactureSmith.getKafkaComponent(KafkaKingdomType.CONSUMER_PRIVATE);
-        ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors()*2);
+        ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
         Consumer<String, String> consumer = leaderConsumeData.receiveLeaderConsumer(leader_host);
         Runnable task = () -> {
             while (true) {
                 ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(KafkaConfiguration.RECEIVE_TIMEOUT));
                 for (ConsumerRecord<String, String> record : records) {
-                    this.sequencedMap.get(topic).put(Integer.parseInt(record.key()), record.value());
+                    if (!this.sequencedMap.get(topic).containsKey(Integer.parseInt(record.key()))) {
+                        this.sequencedMap.get(topic).put(Integer.parseInt(record.key()), new HashMap<>());
+                    }
+                    this.sequencedMap.get(topic).get(Integer.parseInt(record.key())).put(0, record.value());
                     if (record.key().equals(key)) {
                         break;
                     }
@@ -109,11 +117,34 @@ public class ConsensusBroker {
         executorService.awaitTermination(KafkaConfiguration.EXECUTOR_TIMEOUT, TimeUnit.MILLISECONDS);
         executorService.shutdownNow();
         executorService.close();
-        return this.sequencedMap.get(topic).firstEntry().getValue();
+        return this.sequencedMap.get(topic).firstEntry().getValue().values().stream().findFirst();
     }
 
-    private void receive(Consumer<String, String> consumer) {
-
+    @SneakyThrows
+    public Optional<String> receiveDisperseMessageFromLeader(TopicType topic, String key) {
+        KafkaConsumerSameGroup leaderSameConsumeData = this.kafkaManufactureSmith.getKafkaComponent(KafkaKingdomType.CONSUMER_SAME);
+        ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+        Consumer<String, String> consumer = leaderSameConsumeData.getConsumer();
+        Runnable task = () -> {
+            while (true) {
+                ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(KafkaConfiguration.RECEIVE_TIMEOUT));
+                for (ConsumerRecord<String, String> record : records) {
+                    if (!this.sequencedMap.get(topic).containsKey(Integer.parseInt(record.key()))) {
+                        this.sequencedMap.get(topic).put(Integer.parseInt(record.key()), new HashMap<>());
+                    }
+                    this.sequencedMap.get(topic).get(Integer.parseInt(record.key())).put(0, record.value());
+                    if (record.key().equals(key)) {
+                        break;
+                    }
+                }
+            }
+        };
+        executorService.submit(task);
+        executorService.shutdown();
+        executorService.awaitTermination(KafkaConfiguration.EXECUTOR_TIMEOUT, TimeUnit.MILLISECONDS);
+        executorService.shutdownNow();
+        executorService.close();
+        return this.sequencedMap.get(topic).firstEntry().getValue().values().stream().findFirst();
     }
 
     public void clearMap() {
